--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,6 @@
+
 * {
+
   margin: 0;
   padding: 0;
 }
@@ -72,13 +74,13 @@ body {
   font-weight: 100;
 }
 
-.home-page {
-  padding-top: 50px;
-  padding-left: 40px;
-  padding-right: 30px;
-  font-size: 40px;
-  font-weight: 500;
-  line-height: 1.5em;
+.left {
+ 
+  text-align: left;
+  padding: 20px 0px;
+  font-size:large;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ 
 }
  .container{
    margin:50 px;
